Working menu with dummy controllers to render each view

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -217,4 +217,4 @@ mail.smtp=mock
 
 #module.crud=${play.path}/modules/crud
 
-module.secure=${play.path}/modules/secure
+#module.secure=${play.path}/modules/secure
