added the basis functions for the authentication

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,6 +215,6 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
-#module.crud=${play.path}/modules/crud
+module.crud=${play.path}/modules/crud
 
-#module.secure=${play.path}/modules/secure
+module.secure=${play.path}/modules/secure
