--- a/conf/application.conf
+++ b/conf/application.conf
@@ -218,3 +218,6 @@ mail.smtp=mock
 module.crud=${play.path}/modules/crud
 
 module.secure=${play.path}/modules/secure
+
+ugot.recaptcha.privateKey=YOUR_RECAPTCHA_PRIVATE_KEY
+ugot.recaptcha.publicKey=YOUR_RECAPTCHA_PUBLIC_KEY
