--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,12 @@
 	<classpathentry excluding="views/**" kind="src" path="app"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="secure"/>
+	<classpathentry kind="src" path="crud"/>
+	<classpathentry kind="src" path="recaptcha-1.3"/>
 	
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:\play-1.2.5\framework\play-1.2.5.jar" sourcepath="C:/play-1.2.5/framework/src" />
+	<classpathentry kind="lib" path="C:\Users\ASP\git\beautify.me\modules\recaptcha-1.3\lib\recaptcha4j-0.0.8.jar"/>
 	<classpathentry kind="lib" path="C:\play-1.2.5\framework\lib\activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="C:\play-1.2.5\framework\lib\antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="C:\play-1.2.5\framework\lib\asm-all-3.3.1.jar"/>
