--- a/.project
+++ b/.project
@@ -18,5 +18,10 @@
 	<linkedResources><link><name>secure</name><type>2</type><location>C:/play-1.2.5/modules/secure/app</location></link>
 <link><name>conf/secure</name><type>2</type><location>C:/play-1.2.5/modules/secure/conf</location></link>
 <link><name>public/secure</name><type>2</type><location>C:/play-1.2.5/modules/secure/public</location></link>
+<link><name>crud</name><type>2</type><location>C:/play-1.2.5/modules/crud/app</location></link>
+<link><name>conf/crud</name><type>2</type><location>C:/play-1.2.5/modules/crud/conf</location></link>
+<link><name>public/crud</name><type>2</type><location>C:/play-1.2.5/modules/crud/public</location></link>
+<link><name>recaptcha-1.3</name><type>2</type><location>C:/Users/ASP/git/beautify.me/modules/recaptcha-1.3/app</location></link>
+<link><name>conf/recaptcha-1.3</name><type>2</type><location>C:/Users/ASP/git/beautify.me/modules/recaptcha-1.3/conf</location></link>
 </linkedResources>
 </projectDescription>
