--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 *.log
 *.sql
 *.sqlite
+*.bak
 
 # OS generated files #
 ######################
@@ -37,5 +38,6 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
-tmp/
-eclipse/
+/tmp
+/eclipse
+/logs
