--- a/.project
+++ b/.project
@@ -15,5 +15,10 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.playframework.playclipse.playNature</nature>
 	</natures>
-	
+	<linkedResources><link><name>crud</name><type>2</type><location>D:/play-1.2.5/modules/crud/app</location></link>
+<link><name>conf/crud</name><type>2</type><location>D:/play-1.2.5/modules/crud/conf</location></link>
+<link><name>public/crud</name><type>2</type><location>D:/play-1.2.5/modules/crud/public</location></link>
+<link><name>recaptcha-1.3</name><type>2</type><location>D:/play-1.2.5/modules/recaptcha-1.3/app</location></link>
+<link><name>conf/recaptcha-1.3</name><type>2</type><location>D:/play-1.2.5/modules/recaptcha-1.3/conf</location></link>
+</linkedResources>
 </projectDescription>
