--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,7 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-#db=mem
+db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
@@ -216,6 +216,9 @@ mail.smtp=mock
 %test.mail.smtp=mock
 
 #module.crud=${play.path}/modules/crud
+ugot.recaptcha.privateKey=6LccHOMSAAAAAN16_-79qfhYJQQBYTO7cmihBliA
+ugot.recaptcha.publicKey=6LccHOMSAAAAAEbFntRf88wMLQqV8xwpJNttpU3t
+
 ################################################################################################
 #
 # Secure Social Module Settings
