hats and pics on mystuff no1

--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -371,8 +371,7 @@ Accessory(hat60):
     provider: newyorker
     
 Pic(pic1):
-name: Girl
-
+    name: Girl
 
 Pic(pic2):
-name: Girl
+    name: Girl2
