logging in works and shows user

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -232,14 +232,14 @@ ugot.recaptcha.publicKey=6LccHOMSAAAAAEbFntRf88wMLQqV8xwpJNttpU3t
 # Note that this is used when the user went to the login page directly, otherwise SecureSocial
 # tries to redirect the user to the page he intended to access before authenticating.
 #
-# securesocial.login.redirect=MyController.myAction
+securesocial.login.redirect=Application.index
 
 # Logout redirection
 #
 # By default users are taken to the login page when they logout. You can customize that by specifying
 # a controller and action here or a URL.
 #
-# securesocial.logout.redirect=MyController.myAction
+securesocial.logout.redirect=Application.index
 
 #
 # Mailer 
