--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,19 +82,23 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=mem
+# db=mem
 #
 # To connect to a local MySQL5 database, use:
-# db=mysql://user:pwd@host/database
+# !!! change to your db=mysql://user_name:password@localhost/database_name
+  db=mysql://root:root@localhost/play_test
+
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
 # db.url=jdbc:postgresql:database_name
-# db.driver=org.postgresql.Driver
-# db.user=root
-# db.pass=secret
+# !!! change to your username and password
+  db.driver=jdbc:com.mysql.jdbc.Driver
+  db.user=root
+  db.pass=root
+
 #
 # Connections pool configuration :
 # db.pool.timeout=1000
