--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,8 +86,9 @@ date.format=yyyy-MM-dd
 #
 # To connect to a local MySQL5 database, use:
 # !!! change to your db=mysql://user_name:password@localhost/database_name
-  db=mysql://root:root@localhost/play_test
-
+#  db=mysql://root:root@localhost/play_test
+db=mem
+	
 #
 # To connect to a local PostgreSQL9 database, use:
 # db=postgres://user:pwd@host/database
