securesocial on the admin pages, sends real email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,13 +178,13 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-mail.smtp=mock
+#mail.smtp=mock
 
 # Or, specify mail host configuration
-# mail.smtp.host=127.0.0.1
-# mail.smtp.user=admin
-# mail.smtp.pass=
-# mail.smtp.channel=ssl
+mail.smtp.host=smtp.gmail.com
+mail.smtp.user=beautify.info@gmail.com
+mail.smtp.pass=sebagroup7
+mail.smtp.channel=ssl
 
 # Url-resolving in Jobs
 # ~~~~~~
@@ -250,7 +250,7 @@ securesocial.logout.redirect=Application.index
 # Mailer 
 #
 securesocial.mailer.subject=Activate your account
-securesocial.mailer.from=you@at.your.company.com
+securesocial.mailer.from=info@beautify.me
 securesocial.mailer.reset.subject=Reset your password
 
 #
@@ -318,3 +318,12 @@ securesocial.foursquare.authorizationURL=https://foursquare.com/oauth2/authentic
 securesocial.foursquare.accessTokenURL=https://foursquare.com/oauth2/access_token?grant_type=authorization_code
 securesocial.foursquare.clientid=your_client_id
 securesocial.foursquare.secret=your_client_secret
+
+################################################################################################
+#
+# Deadbolt Module Settings
+#
+################################################################################################
+
+deadbolt.handler=controllers.MyDeadboltHandler
+
