--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,12 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="crud"/>
 	<classpathentry kind="src" path="recaptcha-1.3"/>
+	<classpathentry kind="src" path="deadbolt-1.5.4"/>
 	
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:\play-1.2.5\framework\play-1.2.5.jar" sourcepath="D:/play-1.2.5/framework/src" />
 	<classpathentry kind="lib" path="D:\play-1.2.5\modules\recaptcha-1.3\lib\recaptcha4j-0.0.8.jar"/>
+	<classpathentry kind="lib" path="D:\play-1.2.5\modules\deadbolt-1.5.4\lib\play-deadbolt.jar"/>
 	<classpathentry kind="lib" path="D:\play-1.2.5\framework\lib\activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="D:\play-1.2.5\framework\lib\antlr-2.7.7.jar"/>
 	<classpathentry kind="lib" path="D:\play-1.2.5\framework\lib\asm-all-3.3.1.jar"/>
