--- a/.project
+++ b/.project
@@ -20,5 +20,8 @@
 <link><name>public/crud</name><type>2</type><location>D:/play-1.2.5/modules/crud/public</location></link>
 <link><name>recaptcha-1.3</name><type>2</type><location>D:/play-1.2.5/modules/recaptcha-1.3/app</location></link>
 <link><name>conf/recaptcha-1.3</name><type>2</type><location>D:/play-1.2.5/modules/recaptcha-1.3/conf</location></link>
+<link><name>deadbolt-1.5.4</name><type>2</type><location>D:/play-1.2.5/modules/deadbolt-1.5.4/app</location></link>
+<link><name>conf/deadbolt-1.5.4</name><type>2</type><location>D:/play-1.2.5/modules/deadbolt-1.5.4/conf</location></link>
+<link><name>public/deadbolt-1.5.4</name><type>2</type><location>D:/play-1.2.5/modules/deadbolt-1.5.4/public</location></link>
 </linkedResources>
 </projectDescription>
