Fixed admin issues. Sends mail with pic

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,7 +178,7 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-#mail.smtp=mock
+mail.smtp=smtp
 
 # Or, specify mail host configuration
 mail.smtp.host=smtp.gmail.com
@@ -218,7 +218,7 @@ mail.smtp.channel=ssl
 %test.application.mode=dev
 %test.db.url=jdbc:h2:mem:play;MODE=MYSQL;LOCK_MODE=0
 %test.jpa.ddl=create
-%test.mail.smtp=mock
+%test.mail.smtp=smtp
 
 #module.crud=${play.path}/modules/crud
 ugot.recaptcha.privateKey=6LccHOMSAAAAAN16_-79qfhYJQQBYTO7cmihBliA
@@ -250,7 +250,7 @@ securesocial.logout.redirect=Application.index
 # Mailer 
 #
 securesocial.mailer.subject=Activate your account
-securesocial.mailer.from=info@beautify.me
+securesocial.mailer.from=beautify.info@gmail.com
 securesocial.mailer.reset.subject=Reset your password
 
 #
